style: fix location alignment in profile bar

--- a/src/index.css
+++ b/src/index.css
@@ -1,136 +1,85 @@
-*{
+* {
     font-family: "Jost";
-        padding: 0;
-        box-sizing: border-box;
-            user-select: none;
-            -moz-user-select: none;
-            -webkit-user-select: none;
-            -ms-user-select: none;
-            scrollbar-width:none; 
-        -ms-overflow-style: none;
+    padding: 0;
+    box-sizing: border-box;
+    user-select: none;
+    -moz-user-select: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 
-.profileContainer .sub2 .locationContainer{
-    display: grid;
-    position: relative;
-    right: 8%;
-    grid-template-columns:   100px 1fr;
-    grid-template-rows: 2fr;
 
-    .locationicon{
-        align-self: center;
-        justify-self: center;
-        color: rgb(0, 0, 0);
-        grid-column: 2/3;
-        grid-row: 1/2;
-        height: 30px;
-        transition: color 0.4s ease-in-out;
-        &:hover{
-            cursor: pointer;
-        }
-    }
+.profileContainer {
 
-    .locTrue{
-        color: red;
-    }
-    .loc{
-        align-self: center;
-        justify-self:center;
-        grid-column: 1/2;
-        grid-row: 1/2;    
-    }
-
-
-    .setLocationC{
-        border-radius: 5%;
-        background-color: rgb(255, 255, 255);
-        justify-self: stretch;
-        align-self: stretch;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        position: relative;
-        top: 10px;
-        left: 30px;
-        align-items: center;
-        z-index: 1;
-        grid-column: 1/6;
-        grid-row: 2/5;
-
-        button{
-            width: 1fr;
-            font-size: small;
-        }
-    }
-}
-
-.profileContainer{
-    
     border-radius: 5px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color:#D3DACF;
-    height: 10vh;   
+    background-color: #D3DACF;
+    height: 10vh;
 
-    .sub1{  
+    .sub1 {
         font-size: 70%;
         left: 5%;
         position: relative;
     }
 
-   
+
 }
 
-.profileContainer  .sub2{
-        display: flex;
-        gap: 10px;
-        justify-content: center;
-        align-items: center;
-        height: 10vh;
-        position: absolute;
-        right: 5%;
-        z-index: 2;
+.profileContainer .sub2 {
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    height: 10vh;
+    position: absolute;
+    right: 5%;
+    z-index: 2;
 }
 
-    .beforeExp{
-        height: 20px;
-        border-radius: 50%;   
-        transform: scale(1.2);  
-        transition: transform .3s ease-in-out;
-        &:hover{
-            cursor: pointer;
-        }
-    }
+.beforeExp {
+    height: 20px;
+    border-radius: 50%;
+    transform: scale(1.2);
+    transition: transform .3s ease-in-out;
 
-    .beforeExp.active{
-       height: 20px;
-       border-radius: 50%;
-       transform: scale(1.5);
-       &:hover{
+    &:hover {
         cursor: pointer;
-       }
     }
-    
-   
-    .afterExp{
-        height: 40%;
-        width: 40%;
-        border-radius: 50%;
-    }
+}
 
-  .sub2 .profileContainerMenu{
+.beforeExp.active {
+    height: 20px;
+    border-radius: 50%;
+    transform: scale(1.5);
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+
+.afterExp {
+    height: 40%;
+    width: 40%;
+    border-radius: 50%;
+}
+
+.sub2 .profileContainerMenu {
     position: absolute;
     width: 200px;
     height: auto;
-    top:80%; 
-    right:5px;
+    top: 80%;
+    right: 5px;
     background-color: #F1F1F1;
     border-radius: 5%;
     z-index: 1;
 
-    .dpDetails{
+    .dpDetails {
         display: flex;
         align-items: center;
         padding: 10px;
@@ -146,46 +95,49 @@
         border-color: #191919;
     }
 
-    .profileMenu{
+    .profileMenu {
         background-color: #F1F1F1;
         border-bottom-left-radius: 5%;
         border-bottom-right-radius: 10%;
         padding-left: 5px;
-        
-        li{
-            font-size:medium;
+
+        li {
+            font-size: medium;
             padding-top: 8px;
             margin-bottom: 6px;
-            background-color: #F1F1F1; 
-            transition: background-color .3s ease-in-out;           
+            background-color: #F1F1F1;
+            transition: background-color .3s ease-in-out;
         }
 
-        li:hover{
+        li:hover {
             cursor: pointer;
             background-color: #D8D8D8;
         }
 
-        li a , .logout{
+        li a,
+        .logout {
             text-decoration: none;
             color: #191919;
         }
-        .menuIcons{
+
+        .menuIcons {
             padding-right: 5px;
         }
     }
-  }
-  .sub2 .profileContainerMenu.show{
+}
+
+.sub2 .profileContainerMenu.show {
     background-color: F3E7E0;
     animation: showProfile 0.15s ease-in-out 0s 1 normal forwards;
 }
 
-@keyframes showProfile{
-    from{
+@keyframes showProfile {
+    from {
         transform: translateX(0);
         opacity: 0;
     }
 
-    to{
+    to {
         transform: translateX(0);
         opacity: 1;
     }
